--- a/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
+++ b/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
@@ -744,6 +744,13 @@
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="1307"/>
+                    <connections>
+                        <outlet property="collection" destination="8i6-Y3-YRP" id="vxw-Kk-7D9"/>
+                        <outlet property="dateLabel" destination="Qqz-ih-4vv" id="KJh-1d-mcd"/>
+                        <outlet property="hourLabel" destination="CzM-jc-BLy" id="yGw-y1-wad"/>
+                        <outlet property="subjectTextField" destination="qKt-T9-87T" id="JoE-Gj-aNU"/>
+                        <outlet property="typeSegmentedControl" destination="uvW-Cy-pmJ" id="k0g-yX-sng"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lqN-RD-Myz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
