データのやりとりの設定

--- a/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
+++ b/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
@@ -309,11 +309,19 @@
                                     <constraint firstItem="4Jv-2z-FzL" firstAttribute="centerY" secondItem="8sV-i6-7dR" secondAttribute="centerY" id="cEw-MT-yZ9"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jY0-ib-Ef4" customClass="ProcessButton" customModule="Test_Calendar" customModuleProvider="target">
+                                <rect key="frame" x="63" y="589" width="248" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="t5V-Rb-DXh"/>
+                                    <constraint firstAttribute="width" constant="248" id="u0m-UH-gd6"/>
+                                </constraints>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Fmg-VM-Nvv" firstAttribute="top" secondItem="h6B-sq-RxM" secondAttribute="bottom" constant="20" id="0jr-Vr-rr7"/>
                             <constraint firstItem="eML-ch-TJH" firstAttribute="width" secondItem="og8-YI-1VP" secondAttribute="width" multiplier="0.73" id="3q7-rV-QOR"/>
+                            <constraint firstItem="a16-hc-s4I" firstAttribute="top" secondItem="jY0-ib-Ef4" secondAttribute="bottom" constant="36" id="7Yo-3P-E7K"/>
                             <constraint firstItem="8sV-i6-7dR" firstAttribute="width" secondItem="eML-ch-TJH" secondAttribute="width" id="D6Z-em-IL2"/>
                             <constraint firstItem="h6B-sq-RxM" firstAttribute="top" secondItem="wR2-RG-PJF" secondAttribute="bottom" id="Ein-pI-qxB"/>
                             <constraint firstItem="aYW-xZ-kbJ" firstAttribute="top" secondItem="Fmg-VM-Nvv" secondAttribute="top" constant="33" id="EkF-3y-v9y"/>
@@ -326,11 +334,13 @@
                             <constraint firstItem="eML-ch-TJH" firstAttribute="centerX" secondItem="og8-YI-1VP" secondAttribute="centerX" id="hiR-U3-3ZJ"/>
                             <constraint firstItem="eML-ch-TJH" firstAttribute="top" secondItem="aYW-xZ-kbJ" secondAttribute="bottom" constant="31" id="ooV-vu-EcD"/>
                             <constraint firstItem="aYW-xZ-kbJ" firstAttribute="centerX" secondItem="og8-YI-1VP" secondAttribute="centerX" id="uMV-dn-OpU"/>
+                            <constraint firstItem="jY0-ib-Ef4" firstAttribute="centerX" secondItem="og8-YI-1VP" secondAttribute="centerX" id="x7f-Yk-wSm"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="VeG-G2-Nim"/>
                     <connections>
                         <outlet property="amButton" destination="etb-L7-Tp6" id="pi3-lo-g8p"/>
+                        <outlet property="makeButton" destination="jY0-ib-Ef4" id="5WY-6J-oXk"/>
                         <outlet property="pmButton" destination="Gxg-jS-mHK" id="nV8-Hr-vId"/>
                         <outlet property="watch" destination="aYW-xZ-kbJ" id="mVP-mx-oPN"/>
                     </connections>
@@ -405,6 +415,13 @@
                                 <color key="pageIndicatorTintColor" red="0.85490196080000003" green="0.85490196080000003" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="currentPageIndicatorTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </pageControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iS2-Ip-tHY" customClass="ProcessButton" customModule="Test_Calendar" customModuleProvider="target">
+                                <rect key="frame" x="63.5" y="589" width="248" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="248" id="g9e-MJ-OPB"/>
+                                    <constraint firstAttribute="height" constant="42" id="pM7-ow-Z2q"/>
+                                </constraints>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -417,6 +434,8 @@
                             <constraint firstItem="TVN-Jk-Brg" firstAttribute="centerX" secondItem="U1F-ZJ-LDl" secondAttribute="centerX" id="hFn-kH-MMY"/>
                             <constraint firstItem="drt-rf-rMD" firstAttribute="height" secondItem="U1F-ZJ-LDl" secondAttribute="height" multiplier="0.48" id="hGE-Z1-C3h"/>
                             <constraint firstItem="UVQ-Hg-dnm" firstAttribute="leading" secondItem="U1F-ZJ-LDl" secondAttribute="leading" id="mFf-NU-n7L"/>
+                            <constraint firstItem="xxb-TR-dhi" firstAttribute="top" secondItem="iS2-Ip-tHY" secondAttribute="bottom" constant="36" id="nDJ-Pb-zv8"/>
+                            <constraint firstItem="iS2-Ip-tHY" firstAttribute="centerX" secondItem="U1F-ZJ-LDl" secondAttribute="centerX" id="nu1-k3-Csb"/>
                             <constraint firstItem="txm-N4-dDx" firstAttribute="centerX" secondItem="U1F-ZJ-LDl" secondAttribute="centerX" id="r2N-J4-3tO"/>
                             <constraint firstItem="drt-rf-rMD" firstAttribute="centerX" secondItem="U1F-ZJ-LDl" secondAttribute="centerX" id="uGo-LN-epW"/>
                         </constraints>
